--- a/reactive-pg-client/pom.xml
+++ b/reactive-pg-client/pom.xml
@@ -8,7 +8,8 @@
   <properties>
     <compiler-plugin.version>3.8.1</compiler-plugin.version>
     <maven.compiler.release>11</maven.compiler.release>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.resource.plugin>3.3.0</maven.resource.plugin>
+    <project.3.3.0.sourceEncoding>UTF-8</project.3.3.0.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
     <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
@@ -64,13 +65,19 @@
         </executions>
       </plugin>
       <plugin>
+      <groupId>${quarkus.platform.group-id}</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>${compiler-plugin.version}</version>
+        <version>${quarkus.platform.version}</version>
         <configuration>
           <compilerArgs>
             <arg>-parameters</arg>
           </compilerArgs>
         </configuration>
+      </plugin>
+      <plugin>
+      	<groupId>org.apache.maven.plugins</groupId>
+	   	<artifactId>maven-resources-plugin</artifactId>
+	   	<version>${maven.resource.plugin}</version>
       </plugin>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
@@ -102,7 +109,7 @@
         </executions>
       </plugin>
     </plugins>
-  </build>
+ </build>
   <profiles>
     <profile>
       <id>native</id>
