--- a/reactive-pg-client/pom.xml
+++ b/reactive-pg-client/pom.xml
@@ -67,7 +67,7 @@
       <plugin>
       <groupId>${quarkus.platform.group-id}</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>${quarkus.platform.version}</version>
+        <version>${compiler-plugin.version}</version>
         <configuration>
           <compilerArgs>
             <arg>-parameters</arg>
