--- a/reactive-pg-client/pom.xml
+++ b/reactive-pg-client/pom.xml
@@ -78,6 +78,27 @@
       	<groupId>org.apache.maven.plugins</groupId>
 	   	<artifactId>maven-resources-plugin</artifactId>
 	   	<version>${maven.resource.plugin}</version>
+	   	<executions>
+        	<execution>
+            	<id>copy-data</id>
+                <phase>compile</phase>
+                <goals>
+            	    <goal>copy-resources</goal>
+                </goals>
+                <configuration>
+                	<outputDirectory>src/main/resources</outputDirectory>
+                    <resources>
+                    	<resource>
+                        	<directory>${basedir}/../quarkus-sql-data/</directory>
+                            	<includes>
+                                	<include>import.sql</include>
+                            	</includes>
+                        	<filtering>false</filtering>
+                    	</resource>
+                	</resources>
+            	</configuration>
+        	</execution>
+      	</executions>
       </plugin>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
