--- a/reactive-pg-client/pom.xml
+++ b/reactive-pg-client/pom.xml
@@ -29,6 +29,10 @@
     </dependencies>
   </dependencyManagement>
   <dependencies>
+	<dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-hibernate-reactive-panache</artifactId>
+	</dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-resteasy-reactive</artifactId>
